--- a/templates/dashboard/invoice_view.html
+++ b/templates/dashboard/invoice_view.html
@@ -89,23 +89,24 @@
 
                 <div class="mt-4">
                     <div class="row text-600 text-white bgc-default-tp1 py-25">
-                        <div class="d-none d-sm-block col-1" style="color: black;">#</div>
+                        <!-- <div class="d-none d-sm-block col-1" style="color: black;">#</div> -->
                         <div class="col-9 col-sm-5"style="color: black;"><b>Product</b></div>
                         <div class="d-none d-sm-block col-4 col-sm-2" style="color: black;"><b>Qty</b></div>
                         <div class="d-none d-sm-block col-sm-2" style="color: black;"><b>Unit Price</b></div>
                         <div class="col-2" style="color: black;"><b>Amount</b></div>
                     </div>
-
+                    {% for item in item.product%}
                     <div class="text-95 text-secondary-d3">
                         <div class="row mb-2 mb-sm-0 py-25">
-                            <div class="d-none d-sm-block col-1">1</div>
-                            <div class="col-9 col-sm-5">{{item.product}}</div>
-                            <div class="d-none d-sm-block col-2">{{item.order_quantity}}</div>
-                            <div class="d-none d-sm-block col-2 text-95">₹ {{price_per_item}}</div>
+                            <!-- <div class="d-none d-sm-block col-1">1</div> -->
+                            <div class="col-9 col-sm-5">{{item.product_name}}</div>
+                            <div class="d-none d-sm-block col-2">{{item.product_quant}}</div>
+                            <div class="d-none d-sm-block col-2 text-95">₹ {{item.price_per_pc}}</div>
                             <div class="col-2 text-secondary-d2">₹ {{item.price}}</div>
                         </div>
 
                     </div>
+                    {% endfor %}
 
                     <div class="row border-b-2 brc-default-l2"></div>
 
@@ -148,7 +149,7 @@
                                     SubTotal
                                 </div>
                                 <div class="col-5">
-                                    <span class="text-120 text-secondary-d1">₹ {{item.price}}</span>
+                                    <span class="text-120 text-secondary-d1">₹ {{item.total_price}}</span>
                                 </div>
                             </div>
 
@@ -157,7 +158,7 @@
                                     Tax (18%)
                                 </div>
                                 <div class="col-5">
-                                    <span class="text-110 text-secondary-d1">₹ {{gst_amount}}</span>
+                                    <span class="text-110 text-secondary-d1">₹ {{item.gst_amount}}</span>
                                 </div>
                             </div>
 
@@ -166,7 +167,7 @@
                                     Total Amount
                                 </div>
                                 <div class="col-5">
-                                    <span class="text-150 text-success-d3 opacity-2">₹ {{item.total_price}}</span>
+                                    <span class="text-150 text-success-d3 opacity-2">₹ {{item.total_price_inc_gst}}</span>
                                 </div>
                             </div>
                         </div>
