--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -67,7 +67,7 @@
         <a class="navbar-brand text-white" href="{% url 'dashboard-index' %}">Inventory Managament System</a>
         {% if user.is_authenticated %}
         {% if user.is_authenticated and not user.is_superuser %}
-        <a class="navbar-item text-white" href="{% url 'dashboard-staff-myinvoice' %}">My Invoices</a>
+        <!-- <a class="navbar-item text-white" href="{% url 'dashboard-staff-myinvoice' %}">My Invoices</a> -->
         {% endif %}
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
