--- a/templates/dashboard/invoice_view.html
+++ b/templates/dashboard/invoice_view.html
@@ -20,6 +20,11 @@
 
         <div class="page-tools">
             <div class="action-buttons">
+                <a class="btn bg-white btn-light mx-1px text-95" href="{% url 'dashboard-index' %}" data-title="PDF">
+                    <!-- <i class="mr-1 fa fa-file-pdf-o text-danger-m1 text-120 w-2"></i> -->
+                    Back
+                </a>
+                
                 <button class="btn bg-white btn-light mx-1px text-95" data-title="Print" onclick="window.print()">
                     <i class="mr-1 fa fa-print text-primary-m1 text-120 w-2"></i>
                     Print
