--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -47,7 +47,7 @@
                         <div class="col-md-4">
                             <a class="text-decoration-none text-dark" href="#">
                                 <div class="card my-card shadow text-center p-3">
-                                    <h4>Orders <i class="fas fa-shipping-fast"></i></h4>
+                                    <h4>Sales <i class="fas fa-shipping-fast"></i></h4>
                                     <h3>{{ orders_count }}</h3>
                                 </div>
                             </a>
