--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -64,7 +64,7 @@
 <nav class="navbar navbar-expand-lg navbar-info bg-info">
 
     <div class="container">      
-        <a class="navbar-brand text-white" href="{% url 'dashboard-index' %}">Inventory Managament System</a>
+        <a class="navbar-brand text-white" href="{% url 'dashboard-index' %}">Intelligent Inventory Managament System</a>
         {% if user.is_authenticated %}
         {% if user.is_authenticated and not user.is_superuser %}
         <!-- <a class="navbar-item text-white" href="{% url 'dashboard-staff-myinvoice' %}">My Invoices</a> -->
