--- a/templates/partials/topnav.html
+++ b/templates/partials/topnav.html
@@ -31,7 +31,7 @@
             <li>
                 <a href="{% url 'dashboard-order' %}">
                     <span class="icon"><i class="fas fa-database"></i></span>
-                    <span class="item">Orders</span>
+                    <span class="item">Sales</span>
                 </a>
             </li>
             <!-- <li>
