--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -12,7 +12,7 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-header bg-info text-white">
-                    Information
+                    Trending Product Line
                 </div>
                 <div class="card-body">
                     <marquee behavior="" direction="">
