--- a/templates/dashboard/order_details_user.html
+++ b/templates/dashboard/order_details_user.html
@@ -10,7 +10,7 @@
             <div class="col" style="padding-left: 100px;">
                 <div class="card">
                     <div class="card-header">
-                        Order History of {{user_name}}
+                        Sales History of {{user_name}}
                     </div>
                     <div class="card-body">
                         <table class="table bg-white">
