--- a/templates/dashboard/staff_index.html
+++ b/templates/dashboard/staff_index.html
@@ -28,7 +28,7 @@
             <div class="col-md-8">
                 <div class="card">
                     <div class="card-header">
-                        Orders Records
+                        Sales Record
                     </div>
                     <div class="card-body">
                         <table class="table bg-white">
